tests/programs/fail/opaque_private.vi

use #root::util::{erase, eraser};

pub type A;

pub mod A {
  pub impl : Drop[A] = safe erase;

  pub fn new() -> A {
    safe eraser
  }
}

pub impl : Show[A];

pub fn main(&io: &IO) {
  let a = A::new();

  io.println("a: {a.show()}");
}
